# astar

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  build.py  build.sh  imgui.ini  main.cpp
.github/workflows/: cmake-multi-platform.yml  emscripten-build.yml
editor/src/: font.cpp  font.h  imgui_theme_setup.h  main.cpp
editor/src/editors/: globals.h  logic_editor.h  object_editor.h  scene_editor.h  script_editor.h  settings_editor.h  sprite_editor.h  sprite_viewer.h
editor/src/imgui/: TextEditor.cpp  TextEditor.h
engine/: default_palletes.cpp  default_palletes.h  game.cpp  game.h  global.cpp  global.h  keycodes.cpp  keycodes.h  object.cpp  object.h  scene.cpp  scene.h
engine/graphics/: sprite.cpp  sprite.h
engine/logic_system/: logic.cpp  logic.h
engine/script_engine/: script_engine.cpp  script_engine.h
engine/src/: main.cpp
engine/src/game/: game.h
engine/src/game/graphics/: sprite.h
engine_bin/src/: main.cpp  sdl2_input_helper.cpp  sdl2_input_helper.h  sdl3_input_helper.cpp  sdl3_input_helper.h
src/: main.cpp
src/game/: game.cpp  game.h  global.h  object.cpp  object.h
src/game/graphics/: tile.cpp  tile.h
